# auv-controls

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/controls/: harambe  mondika
devel/lib/pkgconfig/: controls.pc
devel/share/controls/cmake/: controlsConfig.cmake
src/controls/: CMakeLists.txt  package.xml
src/controls/src/: child1.cpp  master.cpp
